Enable dynamic CORS origin configuration
CORS allowed origin is now configurable via the app.cors.allowed-origin property, defaulting to http://localhost:4200. This allows the backend to dynamically authorize the frontend origin, improving flexibility for different environments.