@@ -1,6 +1,7 @@
 package tcucl.back_tcucl.config;
 
 import java.util.Arrays;
+import java.util.List;
 
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
@@ -20,14 +21,10 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import static tcucl.back_tcucl.controller.ControllerConstante.REST_API;
-import static tcucl.back_tcucl.controller.ControllerConstante.REST_AUTH;
-import static tcucl.back_tcucl.controller.ControllerConstante.REST_CHANGE_MDP_PREMIERE_CONNEXION;
-import static tcucl.back_tcucl.controller.ControllerConstante.REST_CONNEXION;
+import static tcucl.back_tcucl.controller.ControllerConstante.*;
+
 import tcucl.back_tcucl.filter.JwtFilter;
 import tcucl.back_tcucl.service.impl.CustomUserDetailsServiceImpl;
-
-
 
 @EnableMethodSecurity
 @EnableWebSecurity
@@ -37,13 +34,16 @@ public class SecurityConfig {
     private final CustomUserDetailsServiceImpl customUserDetailsService;
     private final JwtUtils jwtUtils;
     private final boolean devMode;
+    private final String allowedOrigin;
 
     public SecurityConfig(CustomUserDetailsServiceImpl customUserDetailsService,
                           JwtUtils jwtUtils,
-                          @Value("${app.dev-mode:false}") boolean devMode) {
+                          @Value("${app.dev-mode:false}") boolean devMode,
+                          @Value("${app.cors.allowed-origin:http://localhost:4200}") String allowedOrigin) {
         this.customUserDetailsService = customUserDetailsService;
         this.jwtUtils = jwtUtils;
         this.devMode = devMode;
+        this.allowedOrigin = allowedOrigin;
     }
 
     @Bean
@@ -55,6 +55,7 @@ public class SecurityConfig {
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+        // Active CORS uniquement en mode dev
         if (devMode) {
             http.cors(Customizer.withDefaults());
         } else {
@@ -62,30 +63,38 @@ public class SecurityConfig {
         }
 
         http
-                .csrf(AbstractHttpConfigurer::disable)
-                .authorizeHttpRequests(auth ->
-                        auth.requestMatchers(REST_API + REST_AUTH + REST_CONNEXION, REST_API + REST_AUTH + REST_CHANGE_MDP_PREMIERE_CONNEXION
-                                    //     todo_toProd Supprimer les endpoints non sécurisés et de tests en production 
-                                       ,REST_API + "/test/**" 
-                                       ,REST_API + "/test"
-                                       ,"/swagger-ui/**"
-                                       ,"/v3/api-docs/**"
-                                ).permitAll()
-                                .anyRequest().authenticated()
-                )
-                .addFilterBefore(new JwtFilter(customUserDetailsService, jwtUtils), UsernamePasswordAuthenticationFilter.class);
+            .csrf(AbstractHttpConfigurer::disable)
+            .authorizeHttpRequests(auth ->
+                auth.requestMatchers(
+                        REST_API + REST_AUTH + REST_CONNEXION,
+                        REST_API + REST_AUTH + REST_CHANGE_MDP_PREMIERE_CONNEXION,
+                        REST_API + "/test/**",
+                        REST_API + "/test",
+                        "/swagger-ui/**",
+                        "/v3/api-docs/**"
+                ).permitAll()
+                .anyRequest().authenticated()
+            )
+            .addFilterBefore(new JwtFilter(customUserDetailsService, jwtUtils), UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
+    /**
+     * Configuration CORS activée uniquement si app.dev-mode=true
+     */
     @Bean
     @ConditionalOnProperty(name = "app.dev-mode", havingValue = "true")
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:4200"));
+
+        // autorise automatiquement la valeur définie dans .env (API_BASE_URL)
+        configuration.setAllowedOrigins(List.of(allowedOrigin));
+
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
